--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
   datasource:
     url: jdbc:mysql://13.209.75.109:3306/web
     username: root
-    password: 1234
+    password: 12341234
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
@@ -54,7 +54,7 @@ spring:
   datasource:
     url: jdbc:mysql://13.209.75.109:3306/web
     username: root
-    password: 1234
+    password: 12341234
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
